{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 603,
  "lineage": "9ddaa339-0170-d9a1-872c-13bfeea0e587",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "gatekeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "gatekeeper-system",
            "metadata": [
              {
                "generation": 0,
                "name": "gatekeeper-system",
                "resource_version": "6956",
                "uid": "185306d4-487b-44c2-afa6-d185d1ab6c7c"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.EKS.aws_cloudwatch_log_group.this",
            "module.EKS.aws_eks_access_entry.this",
            "module.EKS.aws_eks_access_policy_association.this",
            "module.EKS.aws_eks_cluster.this",
            "module.EKS.aws_iam_policy.cni_ipv6_policy",
            "module.EKS.aws_iam_role.this",
            "module.EKS.aws_iam_role_policy_attachment.this",
            "module.EKS.aws_security_group.cluster",
            "module.EKS.aws_security_group.node",
            "module.EKS.aws_security_group_rule.cluster",
            "module.EKS.aws_security_group_rule.node",
            "module.EKS.data.aws_caller_identity.current",
            "module.EKS.data.aws_iam_policy_document.assume_role_policy",
            "module.EKS.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.EKS.data.aws_iam_session_context.current",
            "module.EKS.data.aws_partition.current",
            "module.EKS.module.kms.aws_kms_external_key.this",
            "module.EKS.module.kms.aws_kms_key.this",
            "module.EKS.module.kms.aws_kms_replica_external_key.this",
            "module.EKS.module.kms.aws_kms_replica_key.this",
            "module.EKS.module.kms.data.aws_caller_identity.current",
            "module.EKS.module.kms.data.aws_iam_policy_document.this",
            "module.EKS.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "4682",
                "uid": "609da2df-fe8c-4062-b09a-4573bc5babfa"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.EKS.aws_cloudwatch_log_group.this",
            "module.EKS.aws_eks_access_entry.this",
            "module.EKS.aws_eks_access_policy_association.this",
            "module.EKS.aws_eks_cluster.this",
            "module.EKS.aws_iam_policy.cni_ipv6_policy",
            "module.EKS.aws_iam_role.this",
            "module.EKS.aws_iam_role_policy_attachment.this",
            "module.EKS.aws_security_group.cluster",
            "module.EKS.aws_security_group.node",
            "module.EKS.aws_security_group_rule.cluster",
            "module.EKS.aws_security_group_rule.node",
            "module.EKS.data.aws_caller_identity.current",
            "module.EKS.data.aws_iam_policy_document.assume_role_policy",
            "module.EKS.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.EKS.data.aws_iam_session_context.current",
            "module.EKS.data.aws_partition.current",
            "module.EKS.module.kms.aws_kms_external_key.this",
            "module.EKS.module.kms.aws_kms_key.this",
            "module.EKS.module.kms.aws_kms_replica_external_key.this",
            "module.EKS.module.kms.aws_kms_replica_key.this",
            "module.EKS.module.kms.data.aws_caller_identity.current",
            "module.EKS.module.kms.data.aws_iam_policy_document.this",
            "module.EKS.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.EKS",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:219872127195:security-group/sg-0f25af21daaa0b2b9",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0f25af21daaa0b2b9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07766d61068395207"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-cluster-sg-20240716235914020000000001",
            "name_prefix": "eks-cluster-sg-",
            "owner_id": "219872127195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-sg"
            },
            "tags_all": {
              "Name": "eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-2f1fee49"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.EKS",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:219872127195:security-group/sg-07766d61068395207",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07766d61068395207",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f25af21daaa0b2b9"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f25af21daaa0b2b9"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f25af21daaa0b2b9"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f25af21daaa0b2b9"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f25af21daaa0b2b9"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f25af21daaa0b2b9"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "eks-nodegrp-sg-20240716235914020000000002",
            "name_prefix": "eks-nodegrp-sg-",
            "owner_id": "219872127195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-nodegrp-sg",
              "kubernetes.io/cluster/myOPAproject_v02": "owned"
            },
            "tags_all": {
              "Name": "eks-nodegrp-sg",
              "kubernetes.io/cluster/myOPAproject_v02": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-2f1fee49"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.EKS",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1253938193",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f25af21daaa0b2b9",
            "security_group_rule_id": "sgr-078efdf1cbb1e780c",
            "self": false,
            "source_security_group_id": "sg-07766d61068395207",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.aws_security_group.cluster",
            "module.EKS.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.EKS",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4164045198",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07766d61068395207",
            "security_group_rule_id": "sgr-0c04ac4d40ad69eeb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.aws_security_group.cluster",
            "module.EKS.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1729200167",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07766d61068395207",
            "security_group_rule_id": "sgr-07e146aee07812da6",
            "self": false,
            "source_security_group_id": "sg-0f25af21daaa0b2b9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.aws_security_group.cluster",
            "module.EKS.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3187167189",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07766d61068395207",
            "security_group_rule_id": "sgr-01a6be768937ee998",
            "self": false,
            "source_security_group_id": "sg-0f25af21daaa0b2b9",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.aws_security_group.cluster",
            "module.EKS.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1958357059",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07766d61068395207",
            "security_group_rule_id": "sgr-0a73a106b66f7d9c0",
            "self": false,
            "source_security_group_id": "sg-0f25af21daaa0b2b9",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.aws_security_group.cluster",
            "module.EKS.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1743131746",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07766d61068395207",
            "security_group_rule_id": "sgr-0036f8ae2418cb9b0",
            "self": false,
            "source_security_group_id": "sg-0f25af21daaa0b2b9",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.aws_security_group.cluster",
            "module.EKS.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-54994857",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07766d61068395207",
            "security_group_rule_id": "sgr-0dfedcd3f9fbb053b",
            "self": false,
            "source_security_group_id": "sg-0f25af21daaa0b2b9",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.aws_security_group.cluster",
            "module.EKS.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-734994092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07766d61068395207",
            "security_group_rule_id": "sgr-0a95479641f550053",
            "self": false,
            "source_security_group_id": "sg-0f25af21daaa0b2b9",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.aws_security_group.cluster",
            "module.EKS.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-62052062",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07766d61068395207",
            "security_group_rule_id": "sgr-048394aa49aaa955c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.aws_security_group.cluster",
            "module.EKS.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2110174527",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07766d61068395207",
            "security_group_rule_id": "sgr-0e498fb3cdec64fe8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.aws_security_group.cluster",
            "module.EKS.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3650688720",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-07766d61068395207",
            "security_group_rule_id": "sgr-0c024d49b9628c077",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.aws_security_group.cluster",
            "module.EKS.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}